k8s/backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: status-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: status-backend
  template:
    metadata:
      labels:
        app: status-backend
    spec:
      containers:
        - name: flask-backend
          # [Important] Target ECR image repository path pushed by Steven
          #image: [AWS account ID].dkr.ecr.ap-northeast-2.amazonaws.com/status-backend:latest
          ports:
            - containerPort: 5000
          # [AWS Exam Topic] Injecting Database credentials via Container Environment Variables
---
apiVersion: v1
kind: Service
metadata:
  name: status-backend-service
spec:
  # Type ClusterIP keeps the backend isolated inside the cluster, ensuring secure internal communication only
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: status-backend
